--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
@@ -19,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
+    "sweetalert2": "^11.23.0",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.13"
   },
